@@ -1,6 +1,15 @@
 2006-12-06  Tania Bento  <tbento@redhat.com>
 
 	* javax/swing/border/CompoundBorder.java:
+	(isBorderOpaque): If inside border is null, return true if outside
+	border is opaque, false otherwise; if outside border is null, return
+	true if inside border is opaque, false otherwise; if inside or
+	outside border are both not null, then return true only if both the
+	inside and outside border are opaque, false otherwise.
+
+2006-12-06  Tania Bento  <tbento@redhat.com>
+
+	* javax/swing/border/CompoundBorder.java:
 	(isBorderOpaque): If inside and outside border both have a null
 	value, return true.
 
